--- a/style.css
+++ b/style.css
@@ -66,12 +66,6 @@ button {
   font-weight: bold;
 }
 
-@media (max-width: 700px), (max-width: 200px) {
-  .not-on-mobile {
-    display: none;
-  }
-}
-
 body {
   font-family: 'Roboto', sans-serif;
   background-color: #16121a;
@@ -82,6 +76,7 @@ body {
 
 .container {
   width: 100%;
+  padding: 1rem 3rem;
 }
 
 .container .nav {
@@ -92,7 +87,7 @@ body {
   font-weight: bold;
 }
 
-@media (max-width: 700px), (max-width: 200px) {
+@media (max-width: 700px) {
   .container .nav {
     width: 100%;
     background-color: red;
@@ -101,7 +96,7 @@ body {
 
 .container .nav .left-nav {
   gap: 2rem;
-  width: 20%;
+  width: 10%;
 }
 
 .container .nav .left-nav img {
@@ -109,11 +104,21 @@ body {
 }
 
 .container .nav .right-nav {
-  gap: 2rem;
+  gap: 1.4rem;
+  width: 90%;
+}
+
+.container .nav .right-nav a {
+  font-size: 16px;
+  line-height: 27px;
 }
 
 .container .nav .right-nav a button {
   border-radius: 2rem;
+}
+
+.container .nav .right-nav svg {
+  width: 20px;
 }
 
 .container .work {
@@ -144,12 +149,21 @@ body {
 }
 
 .container .work .main-work-menu {
-  gap: 4.2rem;
+  gap: 1rem;
   width: 95%;
 }
 
+@media (max-width: 700px), (max-width: 200px) {
+  .container .work .main-work-menu {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
 .container .work .main-work-menu .left-main {
-  width: 48%;
+  width: 50%;
   font-weight: bold;
   padding-left: 2rem;
   padding-top: 10rem;
@@ -158,6 +172,12 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+}
+
+@media (max-width: 700px), (max-width: 200px) {
+  .container .work .main-work-menu .left-main {
+    width: 100%;
+  }
 }
 
 .container .work .main-work-menu .left-main h1 {
@@ -172,6 +192,6 @@ body {
 }
 
 .container .work .main-work-menu .right-main img {
-  width: 74%;
+  width: 88%;
 }
 /*# sourceMappingURL=style.css.map */
