--- a/style.scss
+++ b/style.scss
@@ -14,6 +14,31 @@ body{
 .container{
     width: 100%;
     padding: 1rem 3rem;
+    @media(max-width:768px){
+        padding: 0%;
+    }
+    .mobo-nav{
+        width: 100%;
+        display: none;
+        @media(max-width:768px){
+            display: block;
+            display: flex;
+            padding: 1rem 1rem;
+            justify-content: space-between;
+            background-color: red;
+            gap: 3rem;
+        }
+        .mobo-log{
+            width: 50%;
+            img{
+                width: 50%;
+            }
+        }
+        .mobo-menu{
+            width: 50%;
+            background-color: green;
+        }
+    }
     .nav{
 
         width: 100%;
@@ -21,14 +46,20 @@ body{
         gap: 1rem;
         padding: 1rem 1rem;
         // background-color: red;
-        @media(max-width: 700px){
+        @media(max-width:768px),(max-width: 400px){
             width:100% ;
             background-color: red;
+            display: none;
+            padding: 1rem 1rem;
         }
         font-weight: bold;
         .left-nav{
             gap: 2rem;
             width: 10%;
+             @media(max-width:768px),(max-width: 400px){
+                width:100% ;
+                background-color: red;
+        }
             img{
                 width: 130px;
             }
@@ -36,6 +67,9 @@ body{
         .right-nav{
             gap: 1.4rem;
             width: 90%;
+            @media(max-width:768px){
+                display: none;
+            }
             a{
                 font-size: 16px;
                 line-height: 27px;
@@ -50,11 +84,19 @@ body{
     }
     .work{
         width: 100%;
+        @media(max-width:768px){
+            flex-direction: column;
+        }
         .side-work-menu{
             width: 5%;
             gap: 1rem;
-
             flex-direction: column;
+            @media(max-width:768px){
+                order: 2;
+                width: 100%;
+                flex-direction: row;
+                padding-top: 1rem;
+            }
             svg{
                 width: 18px;
             }
@@ -72,7 +114,7 @@ body{
         .main-work-menu{
             gap: 1rem;
             width: 95%;
-            @media(max-width: 700px),(max-width: 200px){
+            @media(max-width:768px){
                 flex-direction: column;
             }
             .left-main{
@@ -82,14 +124,15 @@ body{
                 padding-top: 10rem;
                 gap: 2rem;
                 flex-direction: column;
-                @media(max-width: 700px),(max-width: 200px){
+                @media(max-width:768px){
                     width: 100%;
+                    order: 2;
                 }
                 h1{
                     width: 100%;
                     font-size: 70px;
                     line-height: 80px;
-                    @media(max-width: 700px),(max-width: 200px){
+                    @media(max-width:768px),(max-width: 200px){
                         // font-size: 40px;
                         // line-height: 50px;
                     }
@@ -98,6 +141,11 @@ body{
             .right-main{
                 width: 50%;
                 padding-top: 3rem;
+                
+                @media(max-width:768px),(max-width: 200px){
+                    order: 1;
+                    width: 100%;
+                }
                 img{
                     width: 88%
                 }
