--- a/style.css
+++ b/style.css
@@ -192,12 +192,19 @@ body {
   .container .work .main-work-menu .left-main {
     width: 100%;
     order: 2;
+    padding-top: 3rem;
   }
 }
 .container .work .main-work-menu .left-main h1 {
   width: 100%;
   font-size: 70px;
   line-height: 80px;
+}
+@media (max-width: 768px) {
+  .container .work .main-work-menu .left-main h1 {
+    font-size: 40px;
+    line-height: 50px;
+  }
 }
 .container .work .main-work-menu .right-main {
   width: 50%;
@@ -210,5 +217,5 @@ body {
   }
 }
 .container .work .main-work-menu .right-main img {
-  width: 88%;
+  width: 100%;
 }/*# sourceMappingURL=style.css.map */
