--- a/style.scss
+++ b/style.scss
@@ -127,14 +127,15 @@ body{
                 @media(max-width:768px){
                     width: 100%;
                     order: 2;
+                    padding-top: 3rem;
                 }
                 h1{
                     width: 100%;
                     font-size: 70px;
                     line-height: 80px;
-                    @media(max-width:768px),(max-width: 200px){
-                        // font-size: 40px;
-                        // line-height: 50px;
+                    @media(max-width:768px){
+                        font-size: 40px;
+                        line-height: 50px;
                     }
                 }
             }
@@ -147,7 +148,7 @@ body{
                     width: 100%;
                 }
                 img{
-                    width: 88%
+                    width: 100%
                 }
             }
         }
