added sticky nav

--- a/_globalClasses.scss
+++ b/_globalClasses.scss
@@ -35,3 +35,11 @@ button{
     color:white;
     font-weight: bold;
 }
+h2{
+    font-size: 46px;
+    line-height: 56px;
+    font-family: "Josefin Sans", sans-serif;
+}
+.align{
+    text-align: center;
+}
