--- a/_globalClasses.scss
+++ b/_globalClasses.scss
@@ -43,3 +43,14 @@ h2{
 .align{
     text-align: center;
 }
+h3{
+    font-size: 24px;
+    line-height: 30px;
+    font-family: "Josefin Sans";;
+    padding-top: .8rem;
+}
+h5{
+    padding-top: 1rem;
+    font-size: 16px;
+    font-family: "Josefin Sans";;
+}
