--- a/style.css
+++ b/style.css
@@ -61,9 +61,69 @@ h2 {
   text-align: center;
 }
 
-body {
-  background-color: red;
-  color: green;
+h3 {
+  font-size: 24px;
+  line-height: 30px;
+  font-family: "Josefin Sans";
+  padding-top: 0.8rem;
+}
+
+h5 {
+  padding-top: 1rem;
+  font-size: 16px;
+  font-family: "Josefin Sans";
+}
+
+.latest-work {
+  background-color: #0F0B12;
+  width: 100%;
+}
+.latest-work .top-latest-work {
+  width: 100%;
+  padding-top: 5rem;
+}
+.latest-work .bottm-latest-work {
+  width: 100%;
+  padding: 2rem 6rem;
+}
+.latest-work .bottm-latest-work .card {
+  width: 31%;
+  position: relative;
+  border-radius: 0.6rem;
+  overflow: hidden;
+}
+.latest-work .bottm-latest-work .card .img-text {
+  background-color: white;
+  position: absolute;
+  bottom: 0;
+  padding: 1rem 2rem;
+  color: black;
+  width: 100%;
+  opacity: 0;
+}
+.latest-work .bottm-latest-work .card .img-text:hover {
+  -webkit-animation: 5s ease-in;
+          animation: 5s ease-in;
+  opacity: 1;
+}
+@-webkit-keyframes scroll {
+  0% {
+    bottom: 0;
+  }
+  50% {
+    bottom: 100;
+  }
+}
+@keyframes scroll {
+  0% {
+    bottom: 0;
+  }
+  50% {
+    bottom: 100;
+  }
+}
+.latest-work .bottm-latest-work .card img {
+  width: 100%;
 }
 
 body {
