--- a/_latestWork.scss
+++ b/_latestWork.scss
@@ -1,6 +1,7 @@
 .latest-work{
     background-color: #0F0B12;
     width: 100%;
+    z-index: 2;
     .top-latest-work{
         width: 100%;
         padding-top: 5rem;
@@ -8,12 +9,20 @@
     .bottm-latest-work{
         width: 100%;
         padding: 2rem 6rem;
+        flex-wrap: wrap;
+        gap: 1.4rem;
+        @media(max-width:768px){
+            // flex-direction: column;
+            padding: 2rem 2rem;
+        }
         .card{
             width: 31%;
-            // background-color: royalblue;
             position: relative;
             border-radius: .6rem;
             overflow: hidden;
+            @media(max-width:768px){
+                width: 100%;
+            }
             .img-text{
                 background-color: white;
                 position: absolute;
@@ -22,6 +31,9 @@
                 color: black;
                 width: 100%;
                 opacity: 0;
+                @media(max-width:768px){
+                    width: 98%;
+                }
                 &:hover{
                     animation: 5s ease-in;
                     opacity: 1;
@@ -37,6 +49,9 @@
             }
             img{
                 width: 100%;
+                @media(max-width:768px){
+                    width: 98%;
+                }
             }
 
         }
