--- a/style.scss
+++ b/style.scss
@@ -21,6 +21,7 @@ body{
     .mobo-nav{
         width: 100%;
         display: none;
+        z-index: 100;
         @media(max-width:768px){
             display: block;
             position: fixed;
