--- a/style.scss
+++ b/style.scss
@@ -27,10 +27,12 @@ body{
             position: fixed;
             width: 100%;
             display: flex;
-            padding: 1rem 1rem;
+            padding-top: 2rem;
+            padding-left: 1rem;
+            padding-bottom: 1rem;
             justify-content: space-between;
-            background-color: black;
-            gap: 3rem;
+            background-color: rgb(22,18,26)
+            
         }
         .mobo-log{
             width: 50%;
@@ -51,8 +53,12 @@ body{
     .nav{
         width: 100%;
         color: white;
+        top: 0;
         gap: 1rem;
+        position: fixed;
         padding: 1rem 1rem;
+        background-color: rgb(22,18,26);
+        z-index: 100;
         // background-color: red;
         @media(max-width:768px),(max-width: 400px){
             width:100% ;
@@ -88,77 +94,82 @@ body{
             }
         }
     }
-    .work{
+    
+}
+.work{
+    width: 100%;
+    @media(max-width:768px){
+        flex-direction: column;
         width: 100%;
+    }
+    .side-work-menu{
+        width: 5%;
+        // background-color: red;
+        gap: 1rem;
+        flex-direction: column;
+        @media(max-width:768px){
+            order: 2;
+            width: 100%;
+            flex-direction: row;
+            padding-top: 1rem;
+        }
+        svg{
+            width: 18px;
+        }
+        .line{
+            width: 30px;
+            height: 3px;
+            background-color: rgb(253, 253, 253);
+        }
+        p{
+            width: 140px;
+            // background-color: rebeccapurple;
+            
+        }
+    }
+    .main-work-menu{
+        gap: 1rem;
+        width: 95%;
         @media(max-width:768px){
             flex-direction: column;
-            width: 100%;
         }
-        .side-work-menu{
-            width: 5%;
-            gap: 1rem;
+        .left-main{
+            width: 50%;
+            font-weight: bold;
+            padding-left: 2rem;
+            padding-top: 10rem;
+            gap: 2rem;
             flex-direction: column;
             @media(max-width:768px){
-                order: 2;
                 width: 100%;
-                flex-direction: row;
-                padding-top: 1rem;
+                order: 2;
+                padding-top: 3rem;
             }
-            svg{
-                width: 18px;
-            }
-            .line{
-                width: 30px;
-                height: 3px;
-                background-color: rgb(253, 253, 253);
-            }
-            p{
-                width: 140px;
-                // background-color: rebeccapurple;
-                
+            h1{
+                width: 100%;
+                font-size: 70px;
+                line-height: 80px;
+                @media(max-width:768px){
+                    font-size: 40px;
+                    line-height: 50px;
+                }
             }
         }
-        .main-work-menu{
-            gap: 1rem;
-            width: 95%;
-            @media(max-width:768px){
-                flex-direction: column;
-            }
-            .left-main{
-                width: 50%;
-                font-weight: bold;
-                padding-left: 2rem;
+        .right-main{
+            width: 50%;
+            padding-top: 7rem;
+            
+            @media(max-width:768px),(max-width: 200px){
+                order: 1;
+                width: 100%;
+                padding-left: .3rem ;
                 padding-top: 10rem;
-                gap: 2rem;
-                flex-direction: column;
-                @media(max-width:768px){
-                    width: 100%;
-                    order: 2;
-                    padding-top: 3rem;
-                }
-                h1{
-                    width: 100%;
-                    font-size: 70px;
-                    line-height: 80px;
-                    @media(max-width:768px){
-                        font-size: 40px;
-                        line-height: 50px;
-                    }
-                }
             }
-            .right-main{
-                width: 50%;
-                padding-top: 3rem;
-                
+            img{
                 @media(max-width:768px),(max-width: 200px){
-                    order: 1;
-                    width: 100%;
-                    padding-left: .3rem ;
-                    padding-top: 10rem;
+                    width: 90%;
                 }
-                img{
-                    width: 100%
-                }
+                width: 78%;
             }
         }
     }
