--- a/_globalClasses.scss
+++ b/_globalClasses.scss
@@ -52,5 +52,24 @@ h3{
 h5{
     padding-top: 1rem;
     font-size: 16px;
-    font-family: "Josefin Sans";;
+    font-family: "Josefin Sans";
+}
+.sub-title{
+    font-family: "Josefin Sans";
+    font-size: 31px;
+    line-height: 36px;
+    font-style: normal;
+}
+.abt-details{
+    font-family: "Josefin Sans";
+    font-size: 18px;
+    line-height: 27px;
+}
+span{
+    color: rgb(88,0,255);
+}
+.bl-btn{
+    background-color: black;
+    border-radius: .6rem;
+    color: white;
 }
