--- a/_globalClasses.scss
+++ b/_globalClasses.scss
@@ -100,3 +100,8 @@ span{
 .portfolio svg:hover, .blog svg:hover {
     transform: rotate(-180deg);
 }
+.right-abt .hire-btn i{
+    color: white;
+    font-size: 1.2rem;
+    transform: rotate(50deg);
+}
