--- a/style.css
+++ b/style.css
@@ -130,6 +130,12 @@ span {
   transform: rotate(-180deg);
 }
 
+.right-abt .hire-btn i {
+  color: white;
+  font-size: 1.2rem;
+  transform: rotate(50deg);
+}
+
 .latest-work {
   background-color: #0F0B12;
   width: 100%;
@@ -176,17 +182,8 @@ span {
   }
 }
 .latest-work .bottm-latest-work .card .img-text:hover {
-  -webkit-animation: 5s ease-in;
-          animation: 5s ease-in;
+  animation: 5s ease-in;
   opacity: 1;
-}
-@-webkit-keyframes scroll {
-  0% {
-    bottom: 0;
-  }
-  50% {
-    bottom: 100;
-  }
 }
 @keyframes scroll {
   0% {
@@ -241,8 +238,376 @@ span {
     width: 100%;
   }
 }
+.abt-me .right-abt .graphic-skils {
+  width: 100%;
+  padding: 2rem 0rem;
+}
+.abt-me .right-abt .graphic-skils .skil-icon {
+  width: 20%;
+  text-align: center;
+}
+.abt-me .right-abt .graphic-skils .skil-icon i {
+  padding: 1.2rem 1.2rem;
+  background-color: white;
+  border-radius: 50%;
+  color: black;
+  margin-bottom: 1rem;
+  font-size: 42px;
+}
+.abt-me .right-abt .graphic-skils .photoshop {
+  align-items: center;
+  flex-direction: column;
+}
+.abt-me .right-abt .graphic-skils .photoshop .icon {
+  align-items: center;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+  padding-right: 3.5rem;
+  padding-left: 2rem;
+  width: 40%;
+  background-color: white;
+  border-radius: 50%;
+  color: black;
+  margin-bottom: 1rem;
+  font-size: 20px;
+}
+.abt-me .right-abt .graphic-skils .photoshop .icon img {
+  margin-right: 1rem;
+  width: 25px;
+}
 .abt-me .right-abt .hire-btn {
   width: 30%;
+}
+
+.services {
+  margin-top: 4rem;
+  width: 100%;
+  padding: 5rem 1rem;
+  background-color: rgb(14, 10, 17);
+  gap: 1rem;
+  align-items: center;
+}
+@media (max-width: 768px) {
+  .services {
+    flex-direction: column;
+    padding: 2rem 0.1rem;
+  }
+}
+.services .left-services {
+  gap: 2rem;
+  flex-direction: column;
+  padding-left: 3rem;
+  width: 40%;
+}
+@media (max-width: 768px) {
+  .services .left-services {
+    width: 100%;
+    padding-left: 0.5rem;
+  }
+}
+.services .left-services h2 {
+  font-size: 46px;
+  line-height: 56px;
+}
+@media (max-width: 768px) {
+  .services .left-services h2 br {
+    display: none;
+  }
+}
+.services .left-services p {
+  line-height: 27px;
+}
+@media (max-width: 768px) {
+  .services .left-services p {
+    width: 90%;
+  }
+}
+.services .left-services button {
+  width: 45%;
+}
+.services .left-services button i {
+  transform: rotate(40deg);
+  font-size: 1.5rem;
+}
+.services .right-services {
+  width: 55%;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+@media (max-width: 768px) {
+  .services .right-services {
+    width: 100%;
+  }
+}
+.services .right-services .card {
+  width: 45%;
+  padding: 2.3rem 2.1rem;
+  gap: 1rem;
+  flex-direction: column;
+  text-align: center;
+  background-color: rgb(0, 0, 0);
+  border-radius: 0.5rem;
+}
+@media (max-width: 768px) {
+  .services .right-services .card {
+    width: 90%;
+  }
+}
+.services .right-services .card img {
+  width: 25%;
+  align-items: center;
+}
+@media (max-width: 768px) {
+  .services .right-services .card img {
+    width: 20%;
+  }
+}
+.services .right-services .card p {
+  text-align: center;
+  line-height: 22px;
+}
+
+.trusted {
+  width: 100%;
+}
+.trusted .top-trusted {
+  text-align: center;
+  padding-top: 6rem;
+}
+.trusted .bottm-trusted {
+  width: 100%;
+  padding: 2rem;
+  align-items: center;
+}
+@media (max-width: 768px) {
+  .trusted .bottm-trusted {
+    padding: 0.5rem;
+  }
+}
+.trusted .bottm-trusted .testimony {
+  width: 80%;
+  padding: 2rem 2rem;
+  align-items: center;
+  margin-left: 10rem;
+}
+@media (max-width: 768px) {
+  .trusted .bottm-trusted .testimony {
+    margin-left: 1rem;
+    width: 100%;
+  }
+}
+.trusted .bottm-trusted .testimony .test-content {
+  width: 100%;
+  padding: 1.2rem;
+  align-items: center;
+}
+.trusted .bottm-trusted .testimony .test-content .slide {
+  width: 100%;
+  gap: 4rem;
+}
+.trusted .bottm-trusted .testimony .test-content .slide .left-slide {
+  width: 45%;
+  position: relative;
+}
+@media (max-width: 768px) {
+  .trusted .bottm-trusted .testimony .test-content .slide .left-slide {
+    width: 100%;
+    gap: 1rem;
+  }
+}
+.trusted .bottm-trusted .testimony .test-content .slide .left-slide img {
+  width: 90%;
+  transform: rotate(10deg);
+  border-right: 2px solid black;
+  border-bottom: 2px solid black;
+}
+.trusted .bottm-trusted .testimony .test-content .slide .left-slide .overaly {
+  width: 50%;
+  height: 268px;
+  background-color: rgb(88, 0, 255);
+  position: absolute;
+  top: 1rem;
+  left: 0rem;
+  transform: rotate(10deg);
+}
+.trusted .bottm-trusted .testimony .test-content .slide .right-slide {
+  width: 70%;
+  flex-direction: column;
+  gap: 1rem;
+}
+@media (max-width: 768px) {
+  .trusted .bottm-trusted .testimony .test-content .slide .right-slide {
+    width: 100%;
+  }
+}
+.trusted .bottm-trusted .testimony .test-content .slide .right-slide img {
+  width: 8%;
+}
+.trusted .bottm-trusted .testimony .test-content .slide .right-slide p {
+  font-size: 18px;
+  line-height: 31px;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .trusted .bottm-trusted .testimony .test-content .slide .right-slide p {
+    font-size: 16px;
+    line-height: 25px;
+  }
+}
+
+.happy-sectn {
+  width: 100%;
+  padding: 2rem 7rem;
+  gap: 2rem;
+}
+@media (max-width: 768px) {
+  .happy-sectn {
+    padding: 2rem 1rem;
+    flex-direction: column;
+  }
+}
+.happy-sectn .left-happy-sectn {
+  width: 50%;
+  gap: 1rem;
+  flex-direction: column;
+}
+@media (max-width: 768px) {
+  .happy-sectn .left-happy-sectn {
+    width: 100%;
+  }
+}
+.happy-sectn .left-happy-sectn h2 {
+  font-size: 70px;
+  line-height: 70px;
+}
+.happy-sectn .left-happy-sectn .my-contacts {
+  width: 40%;
+  margin-top: 2rem;
+  gap: 2rem;
+  flex-direction: column;
+}
+.happy-sectn .left-happy-sectn .my-contacts .email {
+  width: 100%;
+  gap: 0.5rem;
+}
+.happy-sectn .left-happy-sectn .my-contacts .email .email-icon {
+  margin-top: 1rem;
+  width: 40px;
+  height: 40px;
+  align-items: center;
+  margin-left: 0.4rem;
+  font-size: 1.2rem;
+  background-color: black;
+  border-radius: 50%;
+}
+.happy-sectn .left-happy-sectn .my-contacts .phone {
+  width: 100%;
+  gap: 0.5rem;
+}
+.happy-sectn .left-happy-sectn .my-contacts .phone .email-icon {
+  width: 40px;
+  height: 40px;
+  align-items: center;
+  font-size: 1.2rem;
+  background-color: black;
+  border-radius: 50%;
+}
+.happy-sectn .right-happy-sectn {
+  width: 40%;
+  border-radius: 1rem;
+  background-color: rgb(44, 40, 46);
+  padding: 2rem 1rem;
+  gap: 1rem;
+  flex-direction: column;
+}
+@media (max-width: 768px) {
+  .happy-sectn .right-happy-sectn {
+    width: 100%;
+  }
+}
+.happy-sectn .right-happy-sectn textArea {
+  background-color: black;
+  width: 100%;
+  overflow: hidden;
+  padding: 1rem 2rem;
+  color: gainsboro;
+  font-size: 1.1rem;
+  resize: none;
+}
+@media (max-width: 768px) {
+  .happy-sectn .right-happy-sectn textArea {
+    width: 100%;
+  }
+}
+.happy-sectn .right-happy-sectn input {
+  background-color: black;
+  padding: 1rem 2rem;
+  color: gainsboro;
+  font-size: 1.1rem;
+}
+.happy-sectn .right-happy-sectn button {
+  width: 40%;
+}
+
+.conctact {
+  width: 100%;
+}
+.conctact .contact-details {
+  width: 35%;
+  background-color: red;
+  gap: 2rem;
+  flex-direction: column;
+  padding: 1rem;
+}
+.conctact .contact-details img {
+  width: 40%;
+}
+.conctact .contact-Numbers {
+  width: 35%;
+  padding: 0.1rem 2rem;
+  flex-direction: column;
+}
+.conctact .contact-Numbers .title .line {
+  width: 55px;
+  height: 4px;
+  background-color: rgb(89, 6, 150);
+  margin-top: 1rem;
+}
+.conctact .contact-Numbers .numbs-details .numb {
+  margin-top: 2rem;
+  gap: 0.7rem;
+}
+.conctact .contact-Numbers .numbs-details .numb i {
+  font-size: 1.1rem;
+  color: rgb(89, 6, 150);
+}
+.conctact .contact-Numbers .numbs-details a {
+  padding-top: 0.8rem;
+}
+.conctact .contact-Numbers .email-details .numb {
+  margin-top: 0.7rem;
+  gap: 0.7rem;
+}
+.conctact .contact-Numbers .email-details .numb i {
+  font-size: 1.1rem;
+  color: rgb(89, 6, 150);
+}
+.conctact .contact-Numbers .email-details a {
+  padding-top: 0.8rem;
+}
+.conctact .contact-Numbers .website-details .numb {
+  margin-top: 0.7rem;
+  gap: 0.7rem;
+}
+.conctact .contact-Numbers .website-details .numb i {
+  font-size: 1.1rem;
+  color: rgb(89, 6, 150);
+}
+.conctact .contact-Numbers .website-details a {
+  padding-top: 0.8rem;
+}
+.conctact .contact-socials {
+  background-color: green;
 }
 
 body {
@@ -403,6 +768,9 @@ body {
     order: 2;
     padding-top: 3rem;
   }
+}
+.work .main-work-menu .left-main i {
+  transform: rotate(25deg);
 }
 .work .main-work-menu .left-main h1 {
   width: 100%;
