--- a/style.scss
+++ b/style.scss
@@ -6,6 +6,10 @@
 @import"globalClasses";
 @import"latestWork";
 @import"about";
+@import"services";
+@import"trusted";
+@import"happy-sectn";
+@import"conctact";
 body{
     font-family: 'Roboto', sans-serif;
     background-color: rgb(22,18,26);
@@ -147,6 +151,9 @@ body{
                 width: 100%;
                 order: 2;
                 padding-top: 3rem;
+            }
+            i{
+                transform: rotate(25deg);
             }
             h1{
                 width: 100%;
