--- a/_conctact.scss
+++ b/_conctact.scss
@@ -1,71 +1,131 @@
 .conctact{
+    background-color: rgb(0,1,1);
     width:100% ;
-    .contact-details{
-        width: 35%;
-        background-color: red;
-        gap: 2rem;
-        flex-direction: column;
-        padding: 1rem;
-        img{
-            width: 40%;
+    padding: 3rem 2rem;
+    .top-contact{
+        .contact-details{
+            width: 35%;
+            // background-color: red;
+            gap: 2rem;
+            flex-direction: column;
+            padding: 1rem;
+            img{
+                width: 40%;
+            }
+            p{
+                width: 70%;
+            }
         }
-    }
-    .contact-Numbers{
-        width: 35%;
-        padding: .1rem 2rem;
-        flex-direction: column;
-        .title{
-            .line{
-                width: 55px;
-                height: 4px;
-                background-color:  rgb(89,6,150);
+        .contact-Numbers{
+            width: 35%;
+            padding: .1rem 2rem;
+            flex-direction: column;
+            .title{
+                .line{
+                    width: 55px;
+                    height: 4px;
+                    background-color:  rgb(89,6,150);
+                    margin-top: 1rem;
+                }
+                p{
+                    font-size: 16px;
+                    line-height: 27px;
+                    font-family: Family
+                    "Josefin Sans";;
+                    color: rgba(255, 255, 255, 0.84);
+                }
+            }
+            .numbs-details{
+                // background-color: red;
+                .numb{
+                    margin-top: 2rem;
+                    gap: 1.2rem;
+                    i{
+                        font-size: 1.1rem;
+                        color: rgb(89,6,150);
+                    }
+                }
+                a{
+                    padding-top: .8rem;
+                }
+                
+            }
+            .email-details{
+                .numb{
+                    margin-top: .7rem;
+                    gap: 1.2rem;
+                    i{
+                        font-size: 1.1rem;
+                        color: rgb(89,6,150);
+                    }
+                }
+                a{
+                    padding-top: .8rem;
+                }
+                
+            }
+            .website-details{
+                .numb{
+                    margin-top: .7rem;
+                    gap: 1.2rem;
+                    i{
+                        font-size: 1.1rem;
+                        color: rgb(89,6,150);
+                    }
+                }
+                a{
+                    padding-top: .8rem;
+                }
+                
+            }
+        }
+        .contact-socials{
+            padding: 2rem;
+            .socials{
+                width: 80%;
+                // background-color: red;
+                gap: .6rem;
+                margin-bottom: 2rem;
+                .facebk{
+                    width: 23%;
+                    padding: .6rem;
+                    text-align: center;
+                    font-size: 1.2rem;
+                    background-color: black;
+                    border-radius: 50%;
+                    border: 2px solid rgb(152,152,153);
+                    &:hover{
+                        background-color: rgb(80,1,236);
+                    }
+                }
+            }
+            .input{
+                position: relative;
                 margin-top: 1rem;
-            }
-        }
-        .numbs-details{
-            .numb{
-                margin-top: 2rem;
-                gap: .7rem;
-                i{
-                    font-size: 1.1rem;
-                    color: rgb(89,6,150);
+                input{
+                    width: 100%;
+                    padding: .8rem 3.6rem;
+                    border-radius: 20px;
+                }
+                button{
+                    padding: .7rem .6rem;
+                    border-radius: 20px;
+                    background-color: rgb(88,7,150);
+                    position: absolute;
+                    color: white;
+                    right: .4rem;
+                    top: 8%;
                 }
             }
-            a{
-                padding-top: .8rem;
-            }
-            
-        }
-        .email-details{
-            .numb{
-                margin-top: .7rem;
-                gap: .7rem;
-                i{
-                    font-size: 1.1rem;
-                    color: rgb(89,6,150);
-                }
-            }
-            a{
-                padding-top: .8rem;
-            }
-            
-        }
-        .website-details{
-            .numb{
-                margin-top: .7rem;
-                gap: .7rem;
-                i{
-                    font-size: 1.1rem;
-                    color: rgb(89,6,150);
-                }
-            }
-            a{
-                padding-top: .8rem;
-            }
-            
         }
     }
-    .contact-socials{
-        background-color: green;
+    .bottom-contact{
+        text-align: center;
+        margin-top: 5rem;
+        padding-top: 1.2rem;
+        border-top: 1px solid gray;
+        width: 90%;
+        margin-left: 2rem;
     }
+    
 }
