--- a/_happy-sectn.scss
+++ b/_happy-sectn.scss
@@ -29,8 +29,8 @@
                 gap: .5rem;
                 .email-icon{
                     margin-top: 1rem;
-                    width: 40px;
-                    height: 40px;
+                    width: 50px;
+                    height: 50px;
                     align-items: center;
                     margin-left: .4rem;
                     font-size: 1.2rem;
@@ -43,9 +43,11 @@
                 gap: .5rem;
                 
                 .email-icon{
-                    width: 40px;
-                    height: 40px;
+                    margin-top: 1rem;
+                    width: 50px;
+                    height: 50px;
                     align-items: center;
+                    margin-left: .4rem;
                     font-size: 1.2rem;
                     background-color: black;
                     border-radius: 50%;
