--- a/style.css
+++ b/style.css
@@ -492,8 +492,8 @@ span {
 }
 .happy-sectn .left-happy-sectn .my-contacts .email .email-icon {
   margin-top: 1rem;
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   align-items: center;
   margin-left: 0.4rem;
   font-size: 1.2rem;
@@ -505,9 +505,11 @@ span {
   gap: 0.5rem;
 }
 .happy-sectn .left-happy-sectn .my-contacts .phone .email-icon {
-  width: 40px;
-  height: 40px;
+  margin-top: 1rem;
+  width: 50px;
+  height: 50px;
   align-items: center;
+  margin-left: 0.4rem;
   font-size: 1.2rem;
   background-color: black;
   border-radius: 50%;
@@ -550,64 +552,117 @@ span {
 }
 
 .conctact {
+  background-color: rgb(0, 1, 1);
   width: 100%;
+  padding: 3rem 2rem;
 }
-.conctact .contact-details {
+.conctact .top-contact .contact-details {
   width: 35%;
-  background-color: red;
   gap: 2rem;
   flex-direction: column;
   padding: 1rem;
 }
-.conctact .contact-details img {
+.conctact .top-contact .contact-details img {
   width: 40%;
 }
-.conctact .contact-Numbers {
+.conctact .top-contact .contact-details p {
+  width: 70%;
+}
+.conctact .top-contact .contact-Numbers {
   width: 35%;
   padding: 0.1rem 2rem;
   flex-direction: column;
 }
-.conctact .contact-Numbers .title .line {
+.conctact .top-contact .contact-Numbers .title .line {
   width: 55px;
   height: 4px;
   background-color: rgb(89, 6, 150);
   margin-top: 1rem;
 }
-.conctact .contact-Numbers .numbs-details .numb {
+.conctact .top-contact .contact-Numbers .title p {
+  font-size: 16px;
+  line-height: 27px;
+  font-family: Family "Josefin Sans";
+  color: rgba(255, 255, 255, 0.84);
+}
+.conctact .top-contact .contact-Numbers .numbs-details .numb {
   margin-top: 2rem;
-  gap: 0.7rem;
+  gap: 1.2rem;
 }
-.conctact .contact-Numbers .numbs-details .numb i {
+.conctact .top-contact .contact-Numbers .numbs-details .numb i {
   font-size: 1.1rem;
   color: rgb(89, 6, 150);
 }
-.conctact .contact-Numbers .numbs-details a {
+.conctact .top-contact .contact-Numbers .numbs-details a {
   padding-top: 0.8rem;
 }
-.conctact .contact-Numbers .email-details .numb {
+.conctact .top-contact .contact-Numbers .email-details .numb {
   margin-top: 0.7rem;
-  gap: 0.7rem;
+  gap: 1.2rem;
 }
-.conctact .contact-Numbers .email-details .numb i {
+.conctact .top-contact .contact-Numbers .email-details .numb i {
   font-size: 1.1rem;
   color: rgb(89, 6, 150);
 }
-.conctact .contact-Numbers .email-details a {
+.conctact .top-contact .contact-Numbers .email-details a {
   padding-top: 0.8rem;
 }
-.conctact .contact-Numbers .website-details .numb {
+.conctact .top-contact .contact-Numbers .website-details .numb {
   margin-top: 0.7rem;
-  gap: 0.7rem;
+  gap: 1.2rem;
 }
-.conctact .contact-Numbers .website-details .numb i {
+.conctact .top-contact .contact-Numbers .website-details .numb i {
   font-size: 1.1rem;
   color: rgb(89, 6, 150);
 }
-.conctact .contact-Numbers .website-details a {
+.conctact .top-contact .contact-Numbers .website-details a {
   padding-top: 0.8rem;
 }
-.conctact .contact-socials {
-  background-color: green;
+.conctact .top-contact .contact-socials {
+  padding: 2rem;
+}
+.conctact .top-contact .contact-socials .socials {
+  width: 80%;
+  gap: 0.6rem;
+  margin-bottom: 2rem;
+}
+.conctact .top-contact .contact-socials .socials .facebk {
+  width: 23%;
+  padding: 0.6rem;
+  text-align: center;
+  font-size: 1.2rem;
+  background-color: black;
+  border-radius: 50%;
+  border: 2px solid rgb(152, 152, 153);
+}
+.conctact .top-contact .contact-socials .socials .facebk:hover {
+  background-color: rgb(80, 1, 236);
+}
+.conctact .top-contact .contact-socials .input {
+  position: relative;
+  margin-top: 1rem;
+}
+.conctact .top-contact .contact-socials .input input {
+  width: 100%;
+  padding: 0.8rem 3.6rem;
+  border-radius: 20px;
+}
+.conctact .top-contact .contact-socials .input button {
+  padding: 0.7rem 0.6rem;
+  border-radius: 20px;
+  background-color: rgb(88, 7, 150);
+  position: absolute;
+  color: white;
+  right: 0.4rem;
+  top: 8%;
+}
+.conctact .bottom-contact {
+  text-align: center;
+  margin-top: 5rem;
+  padding-top: 1.2rem;
+  border-top: 1px solid gray;
+  width: 90%;
+  margin-left: 2rem;
 }
 
 body {
