--- a/style.css
+++ b/style.css
@@ -554,7 +554,8 @@ span {
 .conctact {
   background-color: rgb(0, 1, 1);
   width: 100%;
-  padding: 3rem 2rem;
+  padding-top: 3.3rem;
+  padding: 1rem 3rem;
 }
 .conctact .top-contact .contact-details {
   width: 35%;
@@ -644,7 +645,7 @@ span {
 }
 .conctact .top-contact .contact-socials .input input {
   width: 100%;
-  padding: 0.8rem 3.6rem;
+  padding: 1rem 2rem;
   border-radius: 20px;
 }
 .conctact .top-contact .contact-socials .input button {
@@ -659,7 +660,8 @@ span {
 .conctact .bottom-contact {
   text-align: center;
   margin-top: 5rem;
-  padding-top: 1.2rem;
+  padding-top: 1.6rem;
+  padding-bottom: 1rem;
   border-top: 1px solid gray;
   width: 90%;
   margin-left: 2rem;
