--- a/_conctact.scss
+++ b/_conctact.scss
@@ -146,6 +146,10 @@
         border-top: 1px solid gray;
         width: 90%;
         margin-left: 2rem;
+        @media(max-width:768px){
+            width: 100%;
+            margin-left: 0rem;
+        }
     }
     
 }
