--- a/style.scss
+++ b/style.scss
@@ -150,6 +150,7 @@ body{
             @media(max-width:768px){
                 width: 100%;
                 order: 2;
+                padding-left: 1rem;
                 padding-top: 3rem;
             }
             i{
@@ -173,12 +174,12 @@ body{
             @media(max-width:768px),(max-width: 200px){
                 order: 1;
                 width: 100%;
-                padding-left: .3rem ;
-                padding-top: 10rem;
+                padding-left: 1.5rem ;
+                padding-top: 8rem;
             }
             img{
                 @media(max-width:768px),(max-width: 200px){
-                    width: 90%;
+                    width: 100%;
                 }
                 width: 78%;
             }
